[package]
name = "color_picker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winsafe = { version = "0.0.16", features = ["gui", "user"] }
notify-rust = { version = "4.8.0" }
screenshots = { version = "0.6.0" }
winapi = {version = "0.3.8", features = ["winuser", "winbase"]}
scopeguard = {version = "1.1.0"}
# winapi = { version = "0.3.9" }